--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div id="wrapper">
     <div id="discordposter">
-      <h2>Discord Poster</h2><br />
+      <h2>Discord Poster</h2>
       <form id="form">
         <label>URL</label>
         <input type="text" id="url" autocomplete="off" placeholder="https://..." name="url" />
